Adição de leitura de artigo Aula 04

--- a/Aula 04.ipynb
+++ b/Aula 04.ipynb
@@ -13,11 +13,18 @@
    "id": "a766cd9b-0301-4d9f-b9d3-f97256101326",
    "metadata": {},
    "source": [
+    "\n",
+    "Leitura: [Statistical modeling: The two cultures - Brad Efron](https://projecteuclid.org/journalArticle/Download?urlId=10.1214%2Fss%2F1009213726)  -> Um divo da estatística\n",
+    "\n",
+    "---\n",
     "KNN para técnica de inputação de dados - Ele não tira a média do conjunto todo para inputar, mas e sim das linhas vizinhas.\n",
     "\n",
     "[Tidymodels](https://www.tmwr.org/) leitura\n",
     "\n",
     "- Revisar Histograma\n",
+    "\n",
+    "----\n",
+    "Nem sempre, o modelo mais especificado é o melhor para predição!!\n",
     "\n",
     "----\n",
     "\n",
