Aula 04 ultima modificação

--- a/Aula 04.ipynb
+++ b/Aula 04.ipynb
@@ -28,6 +28,8 @@
     "\n",
     "----\n",
     "\n",
+    "Algorítmos de Random forest é o primeiro pontapé para começar a modelagem!\n",
+    "\n",
     "Para lidar com problemas de String, utilizar Regex para eliminá-los e padronizar. \n",
     "\n",
     "O que seria paralelização?\n",
